0.7.0
-----
- Added ability to manipulate respose from API handler
- Significant refactoring to support more modular server creation
- Various documentation improvements

0.6.2
-----
- A Few openid fixes
- Ability to set the API endpoint

0.6.1
-----
- Access token handler inspect :headers, :params, :form-params, and :cookies
- Openid Mock not handles post logout redirect.

0.6.0
-----
- :authorized-routes => :unsecured-routes
    - should be a bidi route map to :ok handlers (enforced on system start)
    - top level files are always unsecured
    - root route "/" is also always unsecured
    - to unsecure a whole sub-route (eg: the js folder)
        use bidi's catch-all routes, eg: `{"/js" {true :ok}}`
- Open id mock will now deal with multiple users.
    "user" can be passed as a query param to the open id mock endpoint.
    The user that is passed will be selected out of the :users,
    and if there is no user, the first will be selected
      Example
      ```clojure
      {:openid-mock {:users {"123-456" {:role  ["user.awesome"]
                                        :realm ["14133"]
                                        :sub   "123-456"
                                        :name  "Donald Duck"}
                             "456-789" {:role  ["user.super"]
                                        :realm ["14133"]
                                        :sub   "456-789"
                                        :name  "Mickey Mouse"}}]]
      ```
- Fixing heisenbugs wrt datomic not sorting & protocol-testing randomly failing
- Adding invalid-token-handler to the :openid config
    - Takes a request whenever an invalid token
        is passed to a secured-route (ie: not an unsecured-route)
        and should return whether the request should be allowed
        to flow through the handler stack (defaults to false)
- Removing specter => clojure.walk

0.5.1
-----
- Logging the config on start
- Upgraded specter to 0.11.0

0.5.0
-----